--- a/index.html
+++ b/index.html
@@ -1,5 +1,30 @@
-// Toggle mobile menu
+// Mobile menu toggle
 document.getElementById('menu-toggle').addEventListener('click', function() {
-    const navList = document.querySelector('.nav-list');
-    navList.classList.toggle('show');
+    const navLinks = document.querySelector('.nav-links');
+    navLinks.classList.toggle('show');
+});
+
+// Subtle animation: Fade-in on scroll
+const observerOptions = {
+    threshold: 0.1
+};
+
+const observer = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+        if (entry.isIntersecting) {
+            entry.target.classList.add('visible');
+        }
+    });
+}, observerOptions);
+
+// Apply fade-in to sections
+document.querySelectorAll('.about-section, .menu-section, .contact-section').forEach(section => {
+    section.classList.add('fade-in');
+    observer.observe(section);
+});
+
+// Form submission handler (demo alert; replace with real backend)
+document.getElementById('contact-form').addEventListener('submit', function(e) {
+    e.preventDefault();
+    alert('Thank you for your message! We will get back to you soon.');
 });
